# phone-to-laptop

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CI_SETUP.md  CLAUDE.md  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.py  test_bulgarian.py
.claude/conversations/.sessions/: 04772a04-3750-4351-9415-cfd34a232cad_transcript  0a26db87-d1be-4c6d-9fb0-dcbe0fa9d729_transcript  17bea0f9-3f52-446a-ab27-8ab3579bcbfa_transcript  18863aa3-afb9-4226-86ae-abc9c06c41bb_transcript  235397b7-fb0b-441a-9c6b-b360a83e4e82_transcript  2839162c-0459-4716-827c-10a7dc1f7ab7_transcript  3c751e1a-76c7-4e3b-abd6-c2329b32ad32_transcript  3dc82fec-7a82-4eef-b933-900cd874a256_transcript  3e2a0bb3-5348-463b-bea9-f448397ab0d4_transcript  8c0d48e5-1d74-4784-9e75-9b413a5983e4_transcript  a8724f21-6fa1-401b-8051-0d1eb057f37d_transcript
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CI_SETUP.md  NEW_ARCHITECTURE.md  README.md  plan.md  setup.md
scripts/: validate_bot.py
src/: __init__.py
src/bot/: app.py  registry.py
src/bot/commands/: language.py  new_project.py  projects.py  start.py  status.py
src/bot/handlers/: text.py  voice.py
src/commands/: __init__.py  language.py  new_project.py  projects.py  start.py  status.py  text.py  voice.py
src/core/: __init__.py  bot.py  command.py  registry.py
src/core/services/: cleanup.py  container.py
src/infrastructure/config/: settings.py
src/infrastructure/storage/: json_state.py
src/infrastructure/transcription/: whisper_adapter.py
src/services/: __init__.py  cleanup.py  container.py  project.py  state.py  transcription.py
src/shared/: __init__.py  exceptions.py
summaries/: cc-talk-original-words.md  cc-talk.md
tests/: README.md  TEST_SUMMARY.md  audio_helpers.py  conftest.py  executable_tests.md  sample_bad_interaction.txt  test_analyze_interaction_command.md  test_architecture.md  test_auto_detect_limit.md  test_cleanup.md  test_commands.py  test_commands_real.py  test_core.py  test_end_to_end.py  test_error_scenarios.py  test_full_coverage.py  test_performance.py  test_plan.md  test_services.py  test_simple_language.md  verify_analyze_command.md
tests/test_bot/: test_commands.py
tests/test_core/: test_services.py
tests/test_infrastructure/: test_transcription.py
tests/test_integration/: test_end_to_end.py  test_error_scenarios.py  test_performance.py
